[GTK] Buttons are drawn too large, text not centered https://bugs.webkit.org/show_bug.cgi?id=185854

Patch by Carlos Eduardo Ramalho <cadubentzen@gmail.com> on 2018-08-06
Reviewed by Carlos Garcia Campos.

Some pages require small buttons and the GTK theme was
drawing only down to a minimum size.

No new tests required. Current layout tests and ManualTests/gtk/theme.html
already cover it.

* platform/gtk/RenderThemeGadget.cpp:
(WebCore::RenderThemeGadget::create):
(WebCore::RenderThemeButtonGadget::RenderThemeButtonGadget): Added
(WebCore::RenderThemeButtonGadget::minimumSize const):
Allow sizes smaller than the minimum size.
* platform/gtk/RenderThemeGadget.h:
* platform/gtk/RenderThemeWidget.cpp:
(WebCore::RenderThemeButton::RenderThemeButton):

Canonical link: https://commits.webkit.org/203439@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234592 268f45cc-cd09-0410-ab3c-d52691b4dbfc