Source/WebCore/platform/gtk/RenderThemeGadget.h
@@ -50,7 +50,8 @@ public:
         Radio,
         Arrow,
         Icon,
-        Scrollbar
+        Scrollbar,
+        Button
     };
 
     struct Info {
@@ -167,6 +168,13 @@ public:
 
 private:
     OptionSet<Steppers> m_steppers;
+};
+
+class RenderThemeButtonGadget final : public RenderThemeGadget {
+public:
+    RenderThemeButtonGadget(const Info&, RenderThemeGadget* parent, const Vector<RenderThemeGadget::Info> siblings, unsigned position);
+
+    IntSize minimumSize() const override;
 };
 
 } // namespace WebCore
