Source/WebCore/platform/gtk/RenderThemeWidget.cpp
@@ -182,7 +182,7 @@ RenderThemeToggleButton::RenderThemeToggleButton(Type toggleType)
 
 RenderThemeButton::RenderThemeButton(Default isDefault)
 {
-    RenderThemeGadget::Info info = { RenderThemeGadget::Type::Generic, "button", { "text-button" } };
+    RenderThemeGadget::Info info = { RenderThemeGadget::Type::Button, "button", { "text-button" } };
     if (isDefault == Default::Yes)
         info.classList.append("default");
     m_button = RenderThemeGadget::create(info);
